fix horizontal scrolling
This commit was automatically generated from 40d83ec52593e854a81ac36f7d5e25b0374b02ef

--- a/static/style.css
+++ b/static/style.css
@@ -241,7 +241,7 @@ blockquote > p:last-child {
     position: relative;
     top: -0.5rem;
     left: -0.5rem;
-    width: 100vw;
+    width: calc(100vw - 1.75rem);
     font-size: 1rem;
 }
 
